// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarUpload renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatarUpload-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-size PicassoAvatarWrapper-size PicassoAvatarWrapper-corner PicassoAvatarWrapper-corner"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-centerJustifyContent PicassoContainer-flex PicassoAvatarUpload-dropzone PicassoAvatarUpload-size PicassoAvatarUpload-size PicassoAvatarUpload-corner PicassoAvatarUpload-corner"
          tabindex="0"
        >
          <input
            accept="image/*"
            autocomplete="off"
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <svg
            class="PicassoSvgUpload24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 18v3h19v-3h1v4H1v-4h1Zm9.5-16.207L16.207 6.5l-.707.707-3.501-3.501V19H11l-.001-15.294L7.5 7.207 6.793 6.5 11.5 1.793Z"
            />
          </svg>
        </div>
        <div
          class="PicassoAvatarUpload-leftBottomCorner PicassoAvatarUpload-leftBottomCorner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarUpload when source file URL provided renders image in background 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatarUpload-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-size PicassoAvatarWrapper-size PicassoAvatarWrapper-corner PicassoAvatarWrapper-corner"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-centerJustifyContent PicassoContainer-flex PicassoAvatarUpload-dropzone PicassoAvatarUpload-size PicassoAvatarUpload-size PicassoAvatarUpload-corner PicassoAvatarUpload-corner PicassoAvatarUpload-reupload"
          tabindex="0"
        >
          <input
            accept="image/*"
            autocomplete="off"
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <svg
            class="PicassoSvgUpload24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 18v3h19v-3h1v4H1v-4h1Zm9.5-16.207L16.207 6.5l-.707.707-3.501-3.501V19H11l-.001-15.294L7.5 7.207 6.793 6.5 11.5 1.793Z"
            />
          </svg>
        </div>
        <img
          alt="Photo alt text"
          class="PicassoImage-root PicassoImageAvatar-image PicassoAvatarUpload-imageAvatar"
          data-testid="image-avatar"
          src="http://example.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarUpload when uploading state provided renders loader on top of component 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatarUpload-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-size PicassoAvatarWrapper-size PicassoAvatarWrapper-corner PicassoAvatarWrapper-corner"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-centerJustifyContent PicassoContainer-flex PicassoAvatarUpload-dropzone PicassoAvatarUpload-size PicassoAvatarUpload-size PicassoAvatarUpload-corner PicassoAvatarUpload-corner"
          tabindex="0"
        >
          <input
            accept="image/*"
            autocomplete="off"
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="PicassoLoader-root"
            data-testid="loader"
          >
            <div
              aria-valuenow="35"
              class="MuiCircularProgress-root PicassoCircularProgress-root PicassoLoader-spinnerInherit MuiCircularProgress-colorPrimary MuiCircularProgress-determinate"
              role="progressbar"
              style="width: 16px; height: 16px; transform: rotate(-90deg);"
            >
              <svg
                class="MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                  style="stroke-dasharray: 126.920; stroke-dashoffset: 82.498px;"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="PicassoAvatarUpload-leftBottomCorner PicassoAvatarUpload-leftBottomCorner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarUpload when warning message provided renders image in background 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatarUpload-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-size PicassoAvatarWrapper-size PicassoAvatarWrapper-corner PicassoAvatarWrapper-corner"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-centerJustifyContent PicassoContainer-flex PicassoAvatarUpload-dropzone PicassoAvatarUpload-size PicassoAvatarUpload-size PicassoAvatarUpload-corner PicassoAvatarUpload-corner"
          tabindex="0"
        >
          <input
            accept="image/*"
            autocomplete="off"
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <svg
            class="PicassoSvgUpload24-root"
            style="min-width: 24px; min-height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 18v3h19v-3h1v4H1v-4h1Zm9.5-16.207L16.207 6.5l-.707.707-3.501-3.501V19H11l-.001-15.294L7.5 7.207 6.793 6.5 11.5 1.793Z"
            />
          </svg>
        </div>
        <div
          class="PicassoAvatarUpload-leftBottomCorner PicassoAvatarUpload-leftBottomCorner"
        />
      </div>
      <div
        class="PicassoAvatarUpload-warningIcon"
        data-testid="warning-icon"
      >
        <svg
          class="PicassoSvgExclamationSolid16-root"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0Zm0 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-8a1 1 0 0 0-1 1v5a1 1 0 1 0 2 0V4a1 1 0 0 0-1-1Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
